test/errors/FNF.tec
! TECO test: Test FNF error !
! Commands: ?FNF !
! Requirements: None !
! Execution: Standard !
! Expect: ?FNF [FNF.log] !
 
@^UA{baz}                           ! Name of non-existent input file !

@ER/^EQA/                           ! Test: open file for read !
